# Restaurant-Recommendation-System

./: .gitignore  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SETUP.md  docker-compose.yml
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/routes/: chat.py  health.py  restaurants.py
backend/app/core/: __init__.py  cache.py  embeddings.py  vector_store.py
backend/app/mcp_server/: __init__.py  client.py
backend/app/mcp_server/tools/: __init__.py  google_location.py  google_search.py  vectordb.py  yelp_business.py  yelp_reviews.py
backend/app/models/: chat.py  restaurant.py
backend/app/schemas/: __init__.py  chat_schemas.py  restaurant_schemas.py
backend/app/services/: chat_service.py  llm_service.py  rag_service.py
backend/scripts/: ingest_sample_data.py  setup_vectordb.py
docker/: backend.Dockerfile  frontend.Dockerfile
frontend/: README.md  next.config.js  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/components/Chat/: ChatInterface.tsx  InputBox.tsx  MessageList.tsx
frontend/src/components/Restaurant/: RestaurantCard.tsx  RestaurantList.tsx
frontend/src/hooks/: useChat.ts  useLocation.ts
frontend/src/services/: api.ts
frontend/src/types/: chat.ts  restaurant.ts
